--- a/simulation_all/src/robots/iris_description/package.xml
+++ b/simulation_all/src/robots/iris_description/package.xml
@@ -1,9 +1,10 @@
 <package>
 
-  <name>iris_config</name>
+  <name>iris_description</name>
   <version>0.3.0</version>
   <description>
-     An automatically generated package with all the configuration and launch files for using the iris2 with the MoveIt Motion Planning Framework
+    An automatically generated package with all the configuration and launch files for using the
+    iris2 with the MoveIt Motion Planning Framework
   </description>
   <author email="zh2362207401@gmail.com">zhang</author>
   <maintainer email="zh2362207401@gmail.com">zhang</maintainer>
@@ -33,7 +34,8 @@
        We don't include them by default to prevent installing gazebo and all its dependencies. -->
   <!-- <run_depend>joint_trajectory_controller</run_depend> -->
   <!-- <run_depend>gazebo_ros_control</run_depend> -->
-  <!-- This package is referenced in the warehouse launch files, but does not build out of the box at the moment. Commented the dependency until this works. -->
+  <!-- This package is referenced in the warehouse launch files, but does not build out of the box
+  at the moment. Commented the dependency until this works. -->
   <!-- <run_depend>warehouse_ros_mongo</run_depend> -->
   <run_depend>iris2</run_depend>
 
