--- a/simulation_all/src/simulation_all/package.xml
+++ b/simulation_all/src/simulation_all/package.xml
@@ -4,7 +4,7 @@
     <version>2.0.0</version>
     <description>The simulation_all package</description>
 
-    <maintainer email="fanziqi614@gmail.com">Ziqi Fan</maintainer>
+    <maintainer email="zh2362207401@gmail.com">Yitian Zhang</maintainer>
 
     <license>TODO</license>
 
