--- a/simulation_all/src/robot_joint_controller/package.xml
+++ b/simulation_all/src/robot_joint_controller/package.xml
@@ -3,7 +3,7 @@
     <name>robot_joint_controller</name>
     <version>0.0.0</version>
     <description>The robot_joint_controller package</description>
-    <maintainer email="q@gmail.com">Ziqi Fan</maintainer>
+    <maintainer email="zh2362207401@gmail.com">Yitian Zhang</maintainer>
     <license>Apache</license>
     <buildtool_depend>catkin</buildtool_depend>
     <build_depend>controller_interface</build_depend>
