将中型四足机器人模型名从b2改为mz

--- a/src/robots/mz_description/CMakeLists.txt
+++ b/src/robots/mz_description/CMakeLists.txt
@@ -1,19 +1,14 @@
 cmake_minimum_required(VERSION 2.8.3)
+
 project(mz_description)
 
-find_package(catkin REQUIRED COMPONENTS
-    genmsg
-    roscpp
-    std_msgs
-    tf
-)
+find_package(catkin REQUIRED)
 
-catkin_package(
-    CATKIN_DEPENDS
-)
+catkin_package()
 
-include_directories(
-    # include
-    ${Boost_INCLUDE_DIR}
-    ${catkin_INCLUDE_DIRS}
-)
+find_package(roslaunch)
+
+foreach(dir config launch meshes urdf)
+	install(DIRECTORY ${dir}/
+		DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/${dir})
+endforeach(dir)
