将四足关节控制器节点名称统一为qr_gazebo

--- a/src/robots/mz_description/config/robot_control.yaml
+++ b/src/robots/mz_description/config/robot_control.yaml
@@ -1,4 +1,4 @@
-mz_gazebo:
+qr_gazebo:
     # Publish all joint states -----------------------------------
     joint_state_controller:
         type: joint_state_controller/JointStateController
