修改小狗的仿真可视化模型为自己的sz模型，执行名称修改为sz

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
     "python.analysis.extraPaths": [
         "/home/wl/data/Code/simulation/devel/lib/python3/dist-packages",
         "/opt/ros/noetic/lib/python3/dist-packages"
-    ]
+    ],
+    "cmake.sourceDirectory": "/home/wl/Documents/simulation_all/src/robot_joint_controller"
 }
