--- a/src/robots/sz_description/config/robot_control.yaml
+++ b/src/robots/sz_description/config/robot_control.yaml
@@ -1,4 +1,4 @@
-wl_gazebo:
+qr_gazebo:
     # Publish all joint states -----------------------------------
     joint_state_controller:
         type: joint_state_controller/JointStateController
