--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # 忽略文件夹，仅忽略当前目录下的对应文件夹
 /build/
-/devel/
-/src/CMakeLists.txt
+/install/
+/log/
 /src/robots/a1_description/meshes/
 /src/robots/go1_description/meshes/
 /src/robots/gh1_description/meshes/
