--- a/src/robot_joint_controller_back/package.xml
+++ b/src/robot_joint_controller_back/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>robot_joint_controller</name>
+  <name>ros2_control_demo_example_11</name>
   <version>0.0.0</version>
   <description>Demo package of `ros2_control` hardware for a carlike robot with two wheels in front that steer and two wheels in the back that drive.</description>
 
@@ -18,8 +18,6 @@
   <depend>backward_ros</depend>
   <depend>hardware_interface</depend>
   <depend>pluginlib</depend>
-  <depend>realtime_tools</depend>
-  <depend>robot_msgs</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_lifecycle</depend>
 
@@ -34,11 +32,11 @@
   <exec_depend>rviz2</exec_depend>
   <exec_depend>xacro</exec_depend>
 
-  <!-- <test_depend>ament_cmake_pytest</test_depend>
+  <test_depend>ament_cmake_pytest</test_depend>
   <test_depend>launch_testing_ros</test_depend>
   <test_depend>liburdfdom-tools</test_depend>
   <test_depend>ros2_control_demo_testing</test_depend>
-  <test_depend>xacro</test_depend> -->
+  <test_depend>xacro</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
