--- a/src/robot_description/gh1/config/robot_control.yaml
+++ b/src/robot_description/gh1/config/robot_control.yaml
@@ -4,66 +4,76 @@ controller_manager:
         # Publish all joint states -----------------------------------
         joint_state_controller:
             type: joint_state_controller/JointStateController
-            publish_rate: 1000  
+            # publish_rate: 1000  
+        l_hip_roll_controller:
+            type: robot_joint_controller/RobotJointController
+        l_hip_yaw_controller:
+            type: robot_joint_controller/RobotJointController
+        l_hip_pitch_controller:
+            type: robot_joint_controller/RobotJointController
+        l_knee_pitch_controller:
+            type: robot_joint_controller/RobotJointController
+        l_ankle_pitch_controller:
+            type: robot_joint_controller/RobotJointController
+        r_hip_roll_controller:
+            type: robot_joint_controller/RobotJointController
+        r_hip_yaw_controller:
+            type: robot_joint_controller/RobotJointController
+        r_hip_pitch_controller:
+            type: robot_joint_controller/RobotJointController
+        r_knee_pitch_controller:
+            type: robot_joint_controller/RobotJointController
+        r_ankle_pitch_controller:
+            type: robot_joint_controller/RobotJointController
 
     # left leg Controllers ---------------------------------------
 l_hip_roll_controller:
     ros__parameters:
-        type: robot_joint_controller/RobotJointController
-        joint: l_hip_roll
-        pid: {p: 57.0, i: 0.0, d: 5.7}
+        joint: 
+            - l_hip_roll
 
 l_hip_yaw_controller:
     ros__parameters:
-        type: robot_joint_controller/RobotJointController
-        joint: l_hip_yaw
-        pid: {p: 43.0, i: 0.0, d: 4.3}
+        joint: 
+            - l_hip_yaw
 
 l_hip_pitch_controller:
     ros__parameters:
-        type: robot_joint_controller/RobotJointController
-        joint: l_hip_pitch
-        pid: {p: 114.0, i: 0.0, d: 11.4}
+        joint: 
+            - l_hip_pitch
 
 l_knee_pitch_controller:
     ros__parameters:
-        type: robot_joint_controller/RobotJointController
-        joint: l_knee_pitch
-        pid: {p: 114.0, i: 0.0, d: 11.4}
+        joint: 
+            - l_knee_pitch
 
 l_ankle_pitch_controller:
     ros__parameters:
-        type: robot_joint_controller/RobotJointController
-        joint: l_ankle_pitch
-        pid: {p: 15.3, i: 0.0, d: 1.5}
+        joint: 
+            - l_ankle_pitch
 
     # right leg Controllers ---------------------------------------
 r_hip_roll_controller:
     ros__parameters:
-        type: robot_joint_controller/RobotJointController
-        joint: r_hip_roll
-        pid: {p: 57.0, i: 0.0, d: 5.7}
+        joint: 
+            - r_hip_roll
 
 r_hip_yaw_controller:
     ros__parameters:
-        type: robot_joint_controller/RobotJointController
-        joint: r_hip_yaw
-        pid: {p: 43.0, i: 0.0, d: 4.3}
+        joint: 
+            - r_hip_yaw
 
 r_hip_pitch_controller:
     ros__parameters:
-        type: robot_joint_controller/RobotJointController
-        joint: r_hip_pitch
-        pid: {p: 114.0, i: 0.0, d: 11.4}
+        joint: 
+            - r_hip_pitch
 
 r_knee_pitch_controller:
     ros__parameters:
-        type: robot_joint_controller/RobotJointController
-        joint: r_knee_pitch
-        pid: {p: 114.0, i: 0.0, d: 11.4}
+        joint: 
+            - r_knee_pitch
 
 r_ankle_pitch_controller:
     ros__parameters:
-        type: robot_joint_controller/RobotJointController
-        joint: r_ankle_pitch
-        pid: {p: 15.3, i: 0.0, d: 1.5}
+        joint: 
+            - r_ankle_pitch
