--- a/src/robot_description/gh1/config/robot_control.yaml
+++ b/src/robot_description/gh1/config/robot_control.yaml
@@ -2,78 +2,68 @@ controller_manager:
     ros__parameters:
         update_rate: 500
         # Publish all joint states -----------------------------------
-        joint_state_controller:
-            type: joint_state_controller/JointStateController
+        joint_state_broadcaster:
+            type: joint_state_broadcaster/JointStateBroadcaster
             # publish_rate: 1000  
         l_hip_roll_controller:
             type: robot_joint_controller/RobotJointController
-        l_hip_yaw_controller:
-            type: robot_joint_controller/RobotJointController
-        l_hip_pitch_controller:
-            type: robot_joint_controller/RobotJointController
-        l_knee_pitch_controller:
-            type: robot_joint_controller/RobotJointController
-        l_ankle_pitch_controller:
-            type: robot_joint_controller/RobotJointController
-        r_hip_roll_controller:
-            type: robot_joint_controller/RobotJointController
-        r_hip_yaw_controller:
-            type: robot_joint_controller/RobotJointController
-        r_hip_pitch_controller:
-            type: robot_joint_controller/RobotJointController
-        r_knee_pitch_controller:
-            type: robot_joint_controller/RobotJointController
-        r_ankle_pitch_controller:
-            type: robot_joint_controller/RobotJointController
+        # l_hip_yaw_controller:
+        #     type: robot_joint_controller/RobotJointController
+        # l_hip_pitch_controller:
+        #     type: robot_joint_controller/RobotJointController
+        # l_knee_pitch_controller:
+        #     type: robot_joint_controller/RobotJointController
+        # l_ankle_pitch_controller:
+        #     type: robot_joint_controller/RobotJointController
+        # r_hip_roll_controller:
+        #     type: robot_joint_controller/RobotJointController
+        # r_hip_yaw_controller:
+        #     type: robot_joint_controller/RobotJointController
+        # r_hip_pitch_controller:
+        #     type: robot_joint_controller/RobotJointController
+        # r_knee_pitch_controller:
+        #     type: robot_joint_controller/RobotJointController
+        # r_ankle_pitch_controller:
+        #     type: robot_joint_controller/RobotJointController
 
     # left leg Controllers ---------------------------------------
 l_hip_roll_controller:
     ros__parameters:
-        joint: 
-            - l_hip_roll
+        joint: l_hip_roll
 
-l_hip_yaw_controller:
-    ros__parameters:
-        joint: 
-            - l_hip_yaw
+# l_hip_yaw_controller:
+#     ros__parameters:
+#         joint: l_hip_yaw
 
-l_hip_pitch_controller:
-    ros__parameters:
-        joint: 
-            - l_hip_pitch
+# l_hip_pitch_controller:
+#     ros__parameters:
+#         joint: l_hip_pitch
 
-l_knee_pitch_controller:
-    ros__parameters:
-        joint: 
-            - l_knee_pitch
+# l_knee_pitch_controller:
+#     ros__parameters:
+#         joint: l_knee_pitch
 
-l_ankle_pitch_controller:
-    ros__parameters:
-        joint: 
-            - l_ankle_pitch
+# l_ankle_pitch_controller:
+#     ros__parameters:
+#         joint: l_ankle_pitch
 
-    # right leg Controllers ---------------------------------------
-r_hip_roll_controller:
-    ros__parameters:
-        joint: 
-            - r_hip_roll
+#     # right leg Controllers ---------------------------------------
+# r_hip_roll_controller:
+#     ros__parameters:
+#         joint: r_hip_roll
 
-r_hip_yaw_controller:
-    ros__parameters:
-        joint: 
-            - r_hip_yaw
+# r_hip_yaw_controller:
+#     ros__parameters:
+#         joint: r_hip_yaw
 
-r_hip_pitch_controller:
-    ros__parameters:
-        joint: 
-            - r_hip_pitch
+# r_hip_pitch_controller:
+#     ros__parameters:
+#         joint: r_hip_pitch
 
-r_knee_pitch_controller:
-    ros__parameters:
-        joint: 
-            - r_knee_pitch
+# r_knee_pitch_controller:
+#     ros__parameters:
+#         joint: r_knee_pitch
 
-r_ankle_pitch_controller:
-    ros__parameters:
-        joint: 
-            - r_ankle_pitch
+# r_ankle_pitch_controller:
+#     ros__parameters:
+#         joint: r_ankle_pitch
