.发现加载不出来模型的原因好像是由于stl模型文件不能正确的读取,同时gazebo_ros_force插件好像不能识别body link

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,12 @@
 {
     "python.autoComplete.extraPaths": [
         "/home/wl/data/Code/simulation/devel/lib/python3/dist-packages",
-        "/opt/ros/noetic/lib/python3/dist-packages"
+        "/opt/ros/foxy/lib/python3.8/site-packages",
+        ""
     ],
     "python.analysis.extraPaths": [
         "/home/wl/data/Code/simulation/devel/lib/python3/dist-packages",
-        "/opt/ros/noetic/lib/python3/dist-packages"
+        "/opt/ros/foxy/lib/python3.8/site-packages"
     ],
     "cmake.sourceDirectory": "/home/wl/Documents/simulation_all/src/robot_joint_controller",
     "files.associations": {
