初步成功启动了关节控制器,hardware接口直接使用gazebo的就可以了,将urdf依赖添加到cmakelist中不然才创建不了urdf model对象接收description,实现不了接收参数文件中的joint名称来动态声明关节控制器名字

--- a/src/robot_description/gh1/package.xml
+++ b/src/robot_description/gh1/package.xml
@@ -10,6 +10,7 @@ for gh1 robot</p>
   <maintainer email="TODO@email.com" />
   <license>BSD</license>
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>hardward_interface</buildtool_depend>
   <exec_depend>joint_state_publisher_gui</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>rviz2</exec_depend>
