.將ros2_control_node启动节点中的name去掉,解决了不能注册发布者将控制器参数发布的问题,controller中可以接收到控制器接口关节名称进行控制器配置的问题

--- a/src/robot_description/gh1/config/robot_control.yaml
+++ b/src/robot_description/gh1/config/robot_control.yaml
@@ -10,6 +10,4 @@ controller_manager:
 # left leg Controllers ---------------------------------------
 l_hip_roll_controller:
     ros__parameters:
-        joint: 
-            - l_hip_roll
-
+        joint: l_hip_roll
