--- a/src/simulation_all_ros2/CMakeLists.txt
+++ b/src/simulation_all_ros2/CMakeLists.txt
@@ -17,6 +17,7 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+# find_package(gazebo_ros2_control REQUIRED)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
