.第一次成功基于gazebo_ros2_control插件自动调用controller_manager初始化硬件接口,成功启动并配置了关节控制器

--- a/src/robot_description/gh1/config/robot_control.yaml
+++ b/src/robot_description/gh1/config/robot_control.yaml
@@ -11,3 +11,5 @@ controller_manager:
 l_hip_roll_controller:
     ros__parameters:
         joint: l_hip_roll
+        # 为了能读到xacro内容来获取关节标签内容(主要是关节限制内容)
+        robot_description: /home/wl/Documents/simulation_all_ros2/src/robot_description/gh1/xacro/robot.xacro
